--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <h1 class="text-center">Welcome to Calculate me!</h1>
+    <h1 class="text-center">Nishant's Calculator!</h1>
     <div class="container flex flex-col items-center mx-auto">
       <div class="row">
         <input class="input" type="text"/>
